--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
   </style>
 </head>
 <body>
+  <!--Instructions:
+  The Joker is on the loose again in Gotham City! Police have found a web application where the Joker had allegedly tampered with.
+  This mysterious web application has login page, but it has been behaving abnormally lately. Some time ago, an admin panel was created, but unfortunately, the password was lost to time.
+  Unless you can find it...
+  Can you prove that the Joker had tampered with the website?
+  -->
   <div class="hero">
     <div class="title-container">
       <h1>Log in </h1>
@@ -62,7 +68,7 @@
       <input type="text" id="username" name="username" required>
     </div>
     <div>
-      <label for="password">Password:</label>
+      <label for="password">Password: </label>
       <input type="password" id="password" name="password" required>
     </div>
     <div>
