changed flag format

--- a/admin_panel.html
+++ b/admin_panel.html
@@ -10,6 +10,10 @@
         h1 {
             text-align: center;
         }
+        h3 {
+            text-align: center;
+            margin-top: 100px;
+        }
         p {
             text-align: center;
             margin-top: 30px;
@@ -19,6 +23,9 @@
 <body>
     <h1>Welcome to Admin Panel</h1>
     <p>Remember flag format is flag{}</p>
-    <p>The flag is [username] + [password]</p>
+    <p>The flag is [username] + ", " + [password]</p>
+    <p>For example, if the username was <b>Username</b> and the password was <b>Password</b>, the flag would be </p>
+    <p>flag{Username, Password}</p>
+    <h3>Well done!</h3>
 </body>
 </html>
